# playing-with-llms

./: .gitignore  README.md  lg_agent_v1.0.0.py  lg_agent_v1.1.0.py  lg_agent_v1.2.0.py  lg_agent_v1.3.0.py  pyproject.toml  simple_agent.py  small_hello.py
pwllms/: agent.py  executor.py  graph.py  main.py  planner.py  tools.py
